--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,7 +11,7 @@ OPENAI_API_KEY=sk-...
 # Langfuse
 LANGFUSE_PUBLIC_KEY=pk-lf-...
 LANGFUSE_SECRET_KEY=sk-lf-...
-LANGFUSE_HOST=https://cloud.langfuse.com
+LANGFUSE_BASE_URL=https://cloud.langfuse.com
 
 # Google Books API
 GOOGLE_BOOKS_API_KEY=AIza...
