--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -26,3 +26,8 @@ python-dotenv==1.0.1
 pandas==2.2.3
 scipy==1.14.1
 requests==2.32.3
+
+# Testing
+pytest==8.3.4
+pytest-asyncio==0.24.0
+pytest-cov==6.0.0
