Add NYT API KEY to dev environment

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -16,6 +16,9 @@ LANGFUSE_BASE_URL=https://cloud.langfuse.com
 # Google Books API
 GOOGLE_BOOKS_API_KEY=AIza...
 
+# NYT Books API
+NYT_BOOKS_API_KEY=HOWG...
+
 # Celery
 CELERY_BROKER_URL=redis://localhost:6379/1
 CELERY_RESULT_BACKEND=redis://localhost:6379/2
