--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,6 @@
-# Backend API URL
-NEXT_PUBLIC_API_URL=http://localhost:8000
+# Backend API URL (not used - we use Next.js API routes instead)
+# NEXT_PUBLIC_API_URL is no longer needed
+
+BACKEND_INTERNAL_URL=http://backend:8000
+
+NEXT_PUBLIC_API_URL=""
