Add .env.example, adjust .gitignore

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,7 @@
-# Database
+# Database (use localhost for local dev, postgres for Docker Compose)
 DATABASE_URL=postgresql://user:password@localhost:5432/leaf
 
-# Redis
+# Redis (use localhost for local dev, redis for Docker Compose)
 REDIS_URL=redis://localhost:6379/0
 REDIS_SESSION_TTL=3600
 
@@ -19,7 +19,7 @@ GOOGLE_BOOKS_API_KEY=AIza...
 # NYT Books API
 NYT_BOOKS_API_KEY=HOWG...
 
-# Celery
+# Celery (use localhost for local dev, redis for Docker Compose)
 CELERY_BROKER_URL=redis://localhost:6379/1
 CELERY_RESULT_BACKEND=redis://localhost:6379/2
 
