--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -3,4 +3,8 @@
 
 BACKEND_INTERNAL_URL=http://backend:8000
 
-NEXT_PUBLIC_API_URL=""
+# Development
+NEXT_PUBLIC_API_URL="http://localhost:8000"
+
+# Production
+# NEXT_PUBLIC_API_URL=""
