Add gunicorn env var to .env.example (only for prod)

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -27,3 +27,6 @@ CELERY_RESULT_BACKEND=redis://localhost:6379/2
 ENVIRONMENT=development
 DEBUG=true
 ALLOWED_ORIGINS=http://localhost:3000
+
+# Gunicorn (production only - number of worker processes, default: 4)
+# GUNICORN_WORKERS=4
