--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -4,15 +4,15 @@ services:
     container_name: leaf-postgres
     restart: unless-stopped
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${{project.POSTGRES_USER}}
+      POSTGRES_PASSWORD: ${{project.POSTGRES_PASSWORD}}
+      POSTGRES_DB: ${{project.POSTGRES_DB}}
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
       - leaf-network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      test: ["CMD-SHELL", "pg_isready -U ${{project.POSTGRES_USER}} -d ${{project.POSTGRES_DB}}"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -43,8 +43,22 @@ services:
       dockerfile: Dockerfile.prod
     container_name: leaf-backend
     restart: unless-stopped
-    env_file:
-      - ./backend/.env.prod
+    environment:
+      DATABASE_URL: ${{project.DATABASE_URL}}
+      REDIS_URL: ${{project.REDIS_URL}}
+      REDIS_SESSION_TTL: ${{project.REDIS_SESSION_TTL}}
+      OPENAI_API_KEY: ${{project.OPENAI_API_KEY}}
+      LANGFUSE_PUBLIC_KEY: ${{project.LANGFUSE_PUBLIC_KEY}}
+      LANGFUSE_SECRET_KEY: ${{project.LANGFUSE_SECRET_KEY}}
+      LANGFUSE_BASE_URL: ${{project.LANGFUSE_BASE_URL}}
+      GOOGLE_BOOKS_API_KEY: ${{project.GOOGLE_BOOKS_API_KEY}}
+      NYT_BOOKS_API_KEY: ${{project.NYT_BOOKS_API_KEY}}
+      CELERY_BROKER_URL: ${{project.CELERY_BROKER_URL}}
+      CELERY_RESULT_BACKEND: ${{project.CELERY_RESULT_BACKEND}}
+      GUNICORN_WORKERS: ${{project.GUNICORN_WORKERS}}
+      ENVIRONMENT: ${{project.ENVIRONMENT}}
+      DEBUG: ${{project.DEBUG}}
+      ALLOWED_ORIGINS: ${{project.ALLOWED_ORIGINS}}
     depends_on:
       postgres:
         condition: service_healthy
@@ -64,7 +78,40 @@ services:
     mem_limit: 1g
     mem_reservation: 512m
 
-  celery-worker:
+  celery-worker-1:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile.prod
+    container_name: leaf-celery-1
+    restart: unless-stopped
+    command: celery -A app.workers.celery_app worker --loglevel=info --concurrency=2 --hostname=worker1@%h
+    environment:
+      DATABASE_URL: ${{project.DATABASE_URL}}
+      REDIS_URL: ${{project.REDIS_URL}}
+      REDIS_SESSION_TTL: ${{project.REDIS_SESSION_TTL}}
+      OPENAI_API_KEY: ${{project.OPENAI_API_KEY}}
+      LANGFUSE_PUBLIC_KEY: ${{project.LANGFUSE_PUBLIC_KEY}}
+      LANGFUSE_SECRET_KEY: ${{project.LANGFUSE_SECRET_KEY}}
+      LANGFUSE_BASE_URL: ${{project.LANGFUSE_BASE_URL}}
+      GOOGLE_BOOKS_API_KEY: ${{project.GOOGLE_BOOKS_API_KEY}}
+      NYT_BOOKS_API_KEY: ${{project.NYT_BOOKS_API_KEY}}
+      CELERY_BROKER_URL: ${{project.CELERY_BROKER_URL}}
+      CELERY_RESULT_BACKEND: ${{project.CELERY_RESULT_BACKEND}}
+      ENVIRONMENT: ${{project.ENVIRONMENT}}
+      DEBUG: ${{project.DEBUG}}
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    volumes:
+      - csv_uploads:/tmp/leaf_csv_uploads
+    networks:
+      - leaf-network
+    mem_limit: 512m
+    mem_reservation: 256m
+
+  celery-worker-2:
     build:
       context: ./backend
       dockerfile: Dockerfile.prod
@@ -91,8 +138,9 @@ services:
       dockerfile: Dockerfile.prod
     container_name: leaf-frontend
     restart: unless-stopped
-    env_file:
-      - ./frontend/.env.prod
+    environment:
+      BACKEND_INTERNAL_URL: ${{project.BACKEND_INTERNAL_URL}}
+      NEXT_PUBLIC_API_URL: ${{project.NEXT_PUBLIC_API_URL}}
     depends_on:
       - backend
     ports:
