--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -154,7 +154,7 @@ services:
     depends_on:
       - backend
     networks:
-      - leaf-
+      - leaf-network
       - dokploy-network
     labels:
       - "traefik.enable=true"
