--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -170,8 +170,8 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
-    mem_limit: 512m
-    mem_reservation: 256m
+    mem_limit: 1g
+    mem_reservation: 512m
 
 networks:
   leaf-network:
